--- a/pom.xml
+++ b/pom.xml
@@ -96,7 +96,7 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
 						<systemPropertyVariables>
-							<spring.profiles.active>local</spring.profiles.active>  //test, local
+							<spring.profiles.active>test</spring.profiles.active>  //test, local
 						</systemPropertyVariables>
 					</configuration>
 				</plugin>
