--- a/pom.xml
+++ b/pom.xml
@@ -65,8 +65,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.codehaus.groovy</groupId>
+            <artifactId>groovy</artifactId>
+            <version>2.4.16</version>
+        </dependency>
 
-	</dependencies>
+
+
+    </dependencies>
 
 	<build>
 		<resources>
