--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -6,27 +6,24 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQL10Dialec
 spring.jpa.properties.hibernate.format_sql=true
 spring.sql.init.mode=always
 
-#logging.level.org.springframework.orm.jpa=INFO
-#logging.level.org.springframework.transaction=INFO
-#logging.level.org.springframework.transaction.interceptor=TRACE
-#logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
+logging.level.org.springframework.orm.jpa=INFO
+logging.level.org.springframework.transaction=INFO
+logging.level.org.springframework.transaction.interceptor=TRACE
+logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-#---
-#spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.url=jdbc:h2:file:./db/share_it
-#spring.datasource.username=user
-#spring.datasource.password=password
-#---
 
 #
-spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
-spring.datasource.username=shareit
-spring.datasource.password=shareit
+#spring.datasource.driverClassName=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
+#spring.datasource.username=${POSTGRES_USER:shareit}
+#spring.datasource.password=${POSTGRES_PASSWORD:shareit}
+#spring.jpa.properties.hibernate.show_sql=true
 
-#
+
+
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=test
-spring.datasource.password=test
+spring.datasource.username=${POSTGRES_USER:test}
+spring.datasource.password=${POSTGRES_PASSWORD:test}
+spring.jpa.properties.hibernate.show_sql=true
