--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -11,13 +11,13 @@ logging.level.org.springframework.transaction=INFO
 logging.level.org.springframework.transaction.interceptor=TRACE
 logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 
-
+spring.output.ansi.enabled=ALWAYS
 #
-#spring.datasource.driverClassName=org.postgresql.Driver
-#spring.datasource.url=jdbc:postgresql://localhost:6541/shareit
-#spring.datasource.username=${POSTGRES_USER:shareit}
-#spring.datasource.password=${POSTGRES_PASSWORD:shareit}
-#spring.jpa.properties.hibernate.show_sql=true
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
+spring.datasource.username=${POSTGRES_USER:shareit}
+spring.datasource.password=${POSTGRES_PASSWORD:shareit}
+spring.jpa.properties.hibernate.show_sql=true
 
 
 
