--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-#spring.profiles.active=local
 server.port=9090
 
 spring.jpa.hibernate.ddl-auto=none
@@ -14,16 +13,14 @@ logging.level.org.springframework.orm.jpa.JpaTransactionManager=DEBUG
 spring.output.ansi.enabled=ALWAYS
 #
 spring.datasource.driverClassName=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/shareit
-spring.datasource.username=${POSTGRES_USER:shareit}
-spring.datasource.password=${POSTGRES_PASSWORD:shareit}
-spring.jpa.properties.hibernate.show_sql=true
+spring.datasource.url=jdbc:postgresql://db:5432/shareit
+spring.datasource.username=shareit
+spring.datasource.password=shareit
 
 
 
 spring.config.activate.on-profile=ci,test
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:shareit
-spring.datasource.username=${POSTGRES_USER:test}
-spring.datasource.password=${POSTGRES_PASSWORD:test}
-spring.jpa.properties.hibernate.show_sql=true
+spring.datasource.username=test
+spring.datasource.password=test
