--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,9 +23,9 @@ services:
       - SPRING_DATASOURCE_URL=jdbc:postgresql://db:5432/shareit
       - SPRING_DATASOURCE_USERNAME=shareit
       - SPRING_DATASOURCE_PASSWORD=shareit
-#    volumes:
+    volumes:
 #      - /etc/timezone:/etc/timezone:ro
-#      - /etc/localtime:/etc/timezone:ro
+      - /etc/localtime:/etc/timezone:ro
 
   db:
     image: postgres:13.7-alpine
